Minor modifications to text

--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -35,43 +35,45 @@ $^{2}$Institute for Theory \& Computation,
 \begin{abstract}
   We study a novel electromagnetic signature of supermassive black
   hole binaries whose inspiral starts being dominated by gravitational
-  wave (GW) emission. Combined GW and electromagnetic observations of
-  compact binary mergers would allow to use them as standard sirens
-  for cosmology and a testing ground of general relativity.  If one of
-  the binary members produces a radio jet, the helical chirping
-  morphology of the jet can be used to infer the binary parameters.
-  The jet precesses along a biconical surface due to the binary's
-  orbital motion.  When the binary enters the GW phase of its
-  evolution, the opening angle widens, the jet exhibits milliarcsecond
-  scale wiggles and the conical surface of jet precession is twisted
-  due to the superluminal motion.  For binaries with mass
-  $10^7$--$10^{10}$ M$_\odot$ at redshifts $z<0.5$, monitoring these
-  features in current and archival data will place a lower limit on
-  sources that could be detected by eLISA and Pulsar Timing Arrays.
+  wave (GW) emission.  Recent simulations suggest that the binary's
+  member BHs can continue to accrete gas from the circumbinary
+  accretion disk in this phase of the binary's evolution, all the way
+  until coalescence.  If one of the binary members produces a radio
+  jet as a result of accretion, the jet precesses along a biconical
+  surface due to the binary's orbital motion.  When the binary enters
+  the GW phase of its evolution, the opening angle widens, the jet
+  exhibits milliarcsecond scale wiggles, and the conical surface of
+  jet precession is twisted due to apparant superluminal motion.  The
+  rapidly increasing orbital velocity of the binary gives the jet an
+  appearance of a ``chirp.''  This helical chirping morphology of the
+  jet can be used to infer the binary parameters.  For binaries with
+  mass $10^7$--$10^{10}$ M$_\odot$ at redshifts $z<0.5$, monitoring
+  these features in current and archival data will place a lower limit
+  on sources that could be detected by eLISA and Pulsar Timing Arrays.
   In the future, microarcsecond interferometry with the Square
   Kilometer Array will increase the potential usefulness of this
   technique.
 \end{abstract}
 
 \begin{keywords}
-keyword1 -- keyword2 -- keyword3
+  accretion, accretion discs -- black hole physics -- quasars: supermassive black holes
 \end{keywords}
 
 \section{Introduction}
 \label{sec:intro}
 
 Binaries of supermassive black holes (BHs) arise naturally as a result
-of mergers of galaxies in the context of the heirarchical galaxy
-formation \citep{2000MNRAS.311..576K, 2002MNRAS.336L..61H,
-  2008ApJ...676...33D, 2012MNRAS.422.1306K}.  After a galaxy merger,
-infalling black holes lose their angular momentum in three stages
-before coalescence \citep{1980Natur.287..307B, 2005LRR.....8....8M,
-  2011ASL.....4..181C}.  In the first stage, the black holes sink to
-the center of the gravitational potential of the merger remnant due to
-dynamical friction and form a gravitationally bound binary.  The newly
-formed binary then continues to lose its angular momentum and shrink
-by scattering ambient gas and stars.  In the final stage of the
-binary's evolution, emission of gravitational waves (GWs) becomes the
+of mergers of galaxies in the context of heirarchical galaxy formation
+\citep{2000MNRAS.311..576K, 2002MNRAS.336L..61H, 2008ApJ...676...33D,
+  2012MNRAS.422.1306K}.  After a galaxy merger, infalling black holes
+lose their angular momentum in three stages before coalescence
+\citep{1980Natur.287..307B, 2005LRR.....8....8M, 2011ASL.....4..181C}.
+In the first stage, the black holes sink to the center of the
+gravitational potential of the merger remnant due to dynamical
+friction and form a gravitationally bound binary.  The newly formed
+binary then continues to lose its angular momentum and shrink by
+scattering ambient gas and stars.  In the final stage of the binary's
+evolution, emission of gravitational waves (GWs) becomes the
 predominant mode of angular momentum loss, which results in the
 coalescence of the black holes.
 
@@ -85,17 +87,17 @@ black hole \citep{2005ApJ...622L..93M}, electromagnetic variability in
 the circumbinary disk due to shocks induced by the sudden mass loss of
 the binary following GW emission at coalescence
 \citep{2007APS..APR.S1010B}, flares from shocked remnants of accretion
-disks around recoiled remnant black hole \citep{2007PhRvL..99d1103L,
-  2008ApJ...682..758S, 2009CQGra..26i4032H}, quasi-periodic
-variability in gas accretion in the early stages of black hole merger
-\citep{2008ApJ...672...83M, 2009CQGra..26i4032H, 2012MNRAS.427.2680K},
-evolution in the profiles of broad emission lines shortly before
-merger \citep{2013MNRAS.432.1468M}, characteristic evolution in
-thermal emission due to circumbinary accretion
-\citep{2015MNRAS.446L..36F}, brightening of accretion disk due to
-viscous dissipation of gravitational waves
-\citep{2008PhRvL.101d1101K}, and prompt tidal disruption of stars by
-the recoiled remnant \citep{2011MNRAS.412...75S}.
+disk around the recoiled remnant black hole
+\citep{2007PhRvL..99d1103L, 2008ApJ...682..758S, 2009CQGra..26i4032H},
+quasi-periodic variability in gas accretion in the early stages of
+black hole merger \citep{2008ApJ...672...83M, 2009CQGra..26i4032H,
+  2012MNRAS.427.2680K}, evolution in the profiles of broad emission
+lines shortly before merger \citep{2013MNRAS.432.1468M},
+characteristic evolution in thermal emission due to circumbinary
+accretion \citep{2015MNRAS.446L..36F}, brightening of the circumbinary
+accretion disk due to viscous dissipation of gravitational waves
+\citep{2008PhRvL.101d1101K}, and prompt tidal disruption of ambient
+stars by the recoiled remnant \citep{2011MNRAS.412...75S}. 
 
 In addition to testing GR in the strong field limit, observations of
 electromagnetic counterparts will help localize sources of GWs for
@@ -112,34 +114,6 @@ black hole masses and spins from the GW signal could constrain
 accretion physics during coalescence.  But even before eLISA is
 launched, a search of electromagnetic signatures may help calibrate
 the expected abundance of GW sources.
-
-In this Letter we study the morphology of a jet emitted by one of the
-binary members during its final phase of evolution before coalescence,
-i.e., when the binary's dynamics is dominated by GW emission.  We show
-that the helical chirping morphology of the jet can be used to infer
-the binary parameters.
-
-\section{Binary parameters}
-
-We study a BH binary formed following a gas-rich merger of two
-galaxies as a result of the processes described above.  We consider
-black holes with masses $M_1$ and $M_2$ in a circular orbit of radius
-$a$ around each other.  Let $M=M_1+M_2$.  For simplicity, we consider
-an equal-mass binary ($M_1=M_2$) on a circular orbit. The orbital
-speed of each black hole is given by \citep{2010PhRvD..81d7503L}
-\begin{equation}
-  v = \frac{1}{2}\left(\frac{GM}{a}\right)^{1/2}\!\!\!\! = 5.8\times 10^3\, \mathrm{km~s}^{-1}M_8^{1/2}a_{16}^{-1/2},
-  \label{eqn:vorb}
-\end{equation}
-where $a_{16}\equiv (a/10^{16}$ cm$)$ and $M_8\equiv (M/10^8$
-M$_\odot)$ are the binary separation and mass,
-respectively.\footnote{Note that $10^{16} \mathrm{cm}\approx 3.4\times
-  10^{-3} \mathrm{pc}$.  The Schwarzchild radius of a $10^8$~M$_\odot$
-  black hole is $9.6\times 10^{-6}$~pc, or $\sim 3\times 10^{13}$~cm.}
-The orbital period is
-\begin{equation}
-  P = 2\pi\left(\frac{GM}{a^3}\right)^{-1/2}\!\!\!\! = 1.72\, \mathrm{yr}\, a_{16}^{3/2} M_8^{-1/2}.
-\end{equation}
 
 \begin{figure}
   \begin{center}
@@ -167,21 +141,48 @@ The orbital period is
   \label{fig:BH_orbit}
 \end{figure}
 
-In a gas-rich galaxy merger, the BH binary loses its angular
-momentum by torquing the surrounding disk through spiral arms and
-expelling gas out of a region twice as large as the binary orbit
+In this Letter we study the morphology of a jet emitted by one of the
+binary members during the binary's final phase of evolution before
+coalescence, i.e., when the binary's dynamics is dominated by GW
+emission.  We show that in this case the jet has a peculiar helical
+chirping morphology that can be used to infer the binary parameters.
+
+\section{Binary parameters}
+
+We study a BH binary formed following a gas-rich merger of two
+galaxies as a result of the processes described above.  We consider
+black holes with masses $M_1$ and $M_2$ in a circular orbit of radius
+$a$ around each other.  Let $M=M_1+M_2$.  For simplicity, we consider
+an equal-mass binary ($M_1=M_2$) on a circular orbit. The orbital
+speed of each black hole is given by \citep{2010PhRvD..81d7503L}
+\begin{equation}
+  v_\mathrm{orb} = \frac{1}{2}\left(\frac{GM}{a}\right)^{1/2}\!\!\!\! = 5.8\times 10^3\, \mathrm{km~s}^{-1}M_8^{1/2}a_{16}^{-1/2},
+  \label{eqn:vorb}
+\end{equation}
+where $a_{16}\equiv (a/10^{16}$ cm$)$ and $M_8\equiv (M/10^8$
+M$_\odot)$ are the binary separation and mass,
+respectively.\footnote{Note that $10^{16} \mathrm{cm}\approx 3.4\times
+  10^{-3} \mathrm{pc}$.  The Schwarzchild radius of a $10^8$~M$_\odot$
+  black hole is $9.6\times 10^{-6}$~pc, or $\sim 3\times 10^{13}$~cm.}
+The orbital period is
+\begin{equation}
+  P = 2\pi\left(\frac{GM}{a^3}\right)^{-1/2}\!\!\!\! = 1.72\, \mathrm{yr}\, a_{16}^{3/2} M_8^{-1/2}.
+\end{equation}
+
+In a gas-rich galaxy merger, the BH binary loses its angular momentum
+by torquing the surrounding disk through spiral arms and expelling gas
+out of a region twice as large as the binary orbit
 \citep{2005ApJ...622L..93M, 2007PASJ...59..427H, 2008ApJ...672...83M,
-  2009MNRAS.393.1423C}.  Fresh gas re-enters the region of the binary
-as a result of turbulent transport of angular momentum in the
-surrounding disk \citep{2008ApJ...672...83M, 2012ApJ...755...51N,
-  2012MNRAS.427.2680K, 2012A&A...545A.127R}.  Since the expelled gas
-carries a specific angular momentum of $\sim va$, the coalescence time
-of the binary is inversely proportional to the supply rate of fresh
-gas into the binary region.  In a steady state, this supply rate,
-$\dot M$ is proportional to the accretion rate of the circumbinary gas
-disk.  But only a fraction of gas that enters the central gap accretes
-onto the black hole and fuels quasar activity.  Therefore, it is
-appropriate to express $\dot M$ in Eddington units, $\dot{\mathcal
+  2009MNRAS.393.1423C}.  The expelled gas carries a specific angular
+momentum of $\sim va$.  Further angular momentum dissipation of the
+binary can happen due to its interaction with fresh gas that enters
+the hollowed out region as a result of tidal torques
+\citep{2008ApJ...672...83M, 2012ApJ...755...51N, 2012MNRAS.427.2680K,
+  2012A&A...545A.127R}.  Therefore, the coalescence time of the binary
+is inversely proportional to the rate at which fresh gas re-enters the
+binary region.  But only a fraction of gas that enters the central
+hollow region accretes onto the black hole and fuels quasar activity.
+Therefore, we express $\dot M$ in Eddington units, $\dot{\mathcal
   M}\equiv\dot M /\dot M_E$, where $\dot M_E$ is the accretion rate
 required to power the limiting Eddington luminosity with a radiative
 efficiency of 10\%, $\dot M_E=2.3 M_\odot\, \mathrm{yr}^{-1}M_8$.  We
@@ -202,7 +203,7 @@ By setting $t_\mathrm{gas}=t_\mathrm{GW}$, we can get the orbital
 parameters for the binary when GWs take over.  The orbital speed at
 this stage of the binary's evolution is given by
 \begin{equation}
-  v = 3.6\times 10^3\, \mathrm{km~s}^{-1}(\dot{\mathcal{M}}M_8)^{1/8},
+  v_\mathrm{orb} = 3.6\times 10^3\, \mathrm{km~s}^{-1}(\dot{\mathcal{M}}M_8)^{1/8},
   \label{eqn:v}
 \end{equation}
 The separation between the two black holes at this instant is given by
@@ -210,9 +211,7 @@ The separation between the two black holes at this instant is given by
   a = 8.3\times 10^{-3}\, \mathrm{pc}\, M_8^{3/4}\dot{\mathcal{M}}^{-1/4}.
   \label{eqn:a}
 \end{equation}
-Note that the separation is dependent on the gas accretion rate.  This
-evolution of the binary separation and orbital velocity is shown in
-Figure~\ref{fig:evolve}.
+Note that the separation is dependent on the gas accretion rate.  
 
 \begin{figure}
   \begin{center}
@@ -258,6 +257,21 @@ angle of the cone is given by \citep{1993ApJ...409..130R}
 \begin{equation}
   \sin\psi = \frac{v_\mathrm{orb}\cos\chi}{v_\mathrm{jet}}.
 \end{equation}
+
+\begin{figure}
+  \begin{center}
+    \includegraphics*[width=\columnwidth]{evolve.pdf}
+    % gw.py (case 5) 
+  \end{center}
+  \caption{Evolution of the binary parameters.  As the binary
+    separation $a$ decreases, the orbital velocity $v_\mathrm{orb}$
+    and the opening angle $\psi$ of the precessing jet, increase.
+    This example describes the evolution of a binary with
+    $M=10^8$~M$_\odot$ and $a_0=8.3\times 10^{-3}$~pc, but can be
+    scaled to other masses and initial separations.}
+  \label{fig:evolve}
+\end{figure}
+
 When the binary separation reaches the point where gravitational
 wave-induced inspiral begins, the binary has a velocity given by
 equation~(\ref{eqn:v}), and a separation given by
@@ -268,31 +282,19 @@ velocity of each BH evolves as
 \end{equation}
 which gives the evolution of the opening angle of the cone as 
 \begin{equation}
-  \dot\psi^\mathrm{obs}=\dot\psi = -\frac{1}{2\cot\psi}\frac{\dot a}{a}.
+ \dot\psi = -\frac{1}{2\cot\psi}\frac{\dot a}{a}.
 \end{equation}
 This can be solved analytically to get
 \begin{equation}
-  \sin\psi = \sin\psi_0\left(\frac{a_0}{a}\right),
+  \sin\psi = \sin\psi_0\left(\frac{a_0}{a}\right)^{1/2},
 \end{equation}
 where $\psi_0$ and $a_0$ are the initial values. Thus, as the binary
 continues to shrink the BH orbital velocity grows and the opening
 angle of the conical jet increases (cone opens wider).  The rate at
 which this happens reflects the binary's dynamical evolution.
-Figure~\ref{fig:evolve} shows the evolution of the half-opening angle
-in the gas and GW-dominated phase.
-
-\begin{figure}
-  \begin{center}
-    \includegraphics*[width=\columnwidth]{evolve.pdf}
-    % gw.py (case 5) 
-  \end{center}
-  \caption{Evolution of the binary parameters.  As the binary
-    separation $a$ decreases, the orbital velocity $v_\mathrm{orb}$
-    and the opening angle $\psi$ of the precessing jet, increase.}
-  \label{fig:evolve}
-\end{figure}
-
-
+Figure~\ref{fig:evolve} shows the evolution of the binary separation,
+orbital velocity, and the half-opening angle for a binary in the
+GW-dominated phase.
 
 \section{Jet precession}
 
@@ -329,16 +331,15 @@ in the gas and GW-dominated phase.
 
     \end{tikzpicture}
   \end{center}
-  \caption{Geometry of the jet.  The observer's sky is in the $yz$
-    plane, so that the line of sight is along the $x$-axis.  The jet
-    precesses around the $z^\prime$ axis with half-opening angle
-    $\psi$. The $y$ and $y^\prime$ axes overlap, and $z$, $x$, and
-    $z^\prime$ axes are co-planer.  The angle between the $z^\prime$
-    axis and the line of sight is $i$.  This geometry is valid in the
-    limit $a\ll z^\prime\psi$.}
+  \caption{Geometry of the jet \citep{1982ApJ...262..478G}.  The
+    observer's sky is in the $yz$ plane, so that the line of sight is
+    along the $x$-axis.  The jet precesses around the $z^\prime$ axis
+    with half-opening angle $\psi$. The $y$ and $y^\prime$ axes
+    overlap, and $z$, $x$, and $z^\prime$ axes are co-planer.  The
+    angle between the $z^\prime$ axis and the line of sight is $i$.
+    This geometry is valid in the limit $a\ll z^\prime\psi$.}
   \label{fig:jetgeom}
 \end{figure}
-
 
 \begin{figure*}
 \begin{center}
@@ -413,43 +414,6 @@ that $S_r$ decreases with time according to a simple power law
 We assume $\delta=1$ and $\alpha=1$, hereafter
 \citep{1982ApJ...262..478G}.
 
-\section{Flagging GW binaries and probing GR}
-
-As the binary evolves, the combination of increasing orbital period
-and speed, and the apparant superluminal motion effect, results in a
-jet morphology with an increasing opening angle and increasingly rapid
-periodic variation, together with a twisted shape.
-Figure~\ref{fig:jet_mdot1.0} shows these three features for an
-equal-mass binary with total mass $M=10^{10}$~M$_\odot$.  For
-concreteness, we have assumed $i=40^\circ$ and $\beta=0.9$.  The
-angular diameter distance to the binary is assumed to be $d =
-100$~Mpc, which corresponds to redshift $z\sim 0.3$.  The forward jet
-streches on the sky while the backward jet is compressed due to the
-superluminal motion.  The right panel of Figure~\ref{fig:jet_mdot1.0}
-zooms into the inner region of the forward jet and shows that the
-binary creates wiggles in the jet morphology of the order of a
-milli-arcsecond.  The duration of the binary evolution captured by
-Figure~\ref{fig:jet_mdot1.0} is 100 yr.  Although the system can be
-rescaled to different masses, times, and separation, the initial
-separation in Figure~\ref{fig:jet_mdot1.0} is $\sim 10^{-3}$~pc, when
-the binary enters it GW-dominated phase.
-
-The increasing orbital speed of the binary leads to an increase in the
-jet's precession angular velocity.  This increases the helicity of the
-jet such that the jet is wound up increasingly tightly closer to the
-source.  This gives rise to a ``chirping'' morphology as seen in
-Figure~\ref{fig:jet_mdot1.0}.  The chirp is easier to resolve in jets
-that are closer to the line of sight, where superluminal motion can
-magnify the forward jet.  A chirping black hole is an unambiguous
-signature of a rapidly evolving binary BH system; the chirp is direct
-reflection of the orbital velocity evolution in
-Figure~\ref{fig:evolve}.  Together, the three features of the jet
-morphology in Figure~\ref{fig:jet_mdot1.0}, namely, conical jet
-geometry with an increasing opening angle, a radio chirp geometry, and
-an asymmetrical shape, directly probe the dynamics of the binary in
-its GW phase. Observations of such a milliarcsecond geometry can thus
-constrain GR in the strong field limit.
-
 \begin{table}
 \begin{center}
 \begin{tabular}{c l}
@@ -472,20 +436,69 @@ $\dot{\mathcal M}$ & Gas accretion rate\\
 \label{table:params}
 \end{table}
 
+\section{Flagging GW binaries and probing GR}
+
+As the binary evolves, the combination of increasing orbital speed and
+the apparant superluminal motion effect results in a jet morphology
+with an increasing opening angle and increasingly rapid periodic
+variation, together with a twisted shape.
+Figure~\ref{fig:jet_mdot1.0} shows these three features for an
+equal-mass binary with total mass $M=10^{10}$~M$_\odot$.  For
+concreteness, we have assumed $i=40^\circ$ and $\beta=0.9$.  The
+angular diameter distance to the binary is assumed to be $d = 100$~Mpc
+(which corresponds to redshift $z\sim 0.025$).  The forward jet
+stretches on the sky while the backward jet is compressed due to the
+apparent superluminal motion.  The right panel of
+Figure~\ref{fig:jet_mdot1.0} zooms into the inner region of the
+forward jet and shows that the binary creates wiggles in the jet
+morphology of the order of a milli-arcsecond.  The duration of the
+binary evolution captured by Figure~\ref{fig:jet_mdot1.0} is 100 yr.
+Although the system can be rescaled to different masses, times, and
+separation, the initial separation in Figure~\ref{fig:jet_mdot1.0} is
+$\sim 10^{-3}$~pc, when the binary enters it GW-dominated phase.
+
+The increasing orbital speed of the binary leads to an increase in the
+jet's precession angular velocity.  This increases the helicity of the
+jet such that the jet is wound up increasingly tightly closer to the
+source.  This gives rise to a ``chirping'' morphology as seen in
+Figure~\ref{fig:jet_mdot1.0}.  The chirp is easier to resolve in jets
+that are closer to the line of sight, where superluminal motion can
+magnify the forward jet.  A chirping black hole is an unambiguous
+signature of a rapidly evolving binary BH system; the chirp is direct
+reflection of the orbital velocity evolution in
+Figure~\ref{fig:evolve}.  Together, the three features of the jet
+morphology in Figure~\ref{fig:jet_mdot1.0}, namely, conical jet
+geometry with an increasing opening angle, a radio chirp geometry, and
+an asymmetrical shape, directly probe the dynamics of the binary in
+its GW phase.
+
+Observations of such a milliarcsecond geometry can thus constrain GR
+in the strong field limit.  The relative separation of the jet winding
+directly constraints the ratio $a_{16}^4/M_8^3$ by constraining the
+evolution of the orbital velocity.  The jet opening angle evolution
+tracks the evolution of the binary separation.  We make the code for
+implementing the model presented in this Letter available at
+\url{https://github.com/gkulkarni/JetMorphology} under the MIT open
+source software license.  This code can be used to explore the
+dynamical, astrophysical, and geometrical parameter spaces of the
+model.
+
 \section{Conclusion}
 
 Using a model of jet precession in a binary BH, we have shown that the
-jet morphology of a binary that is entering its GW-induced phase of
-inspiral exhibits a distinct chirping morphology. Jets in these
-binaries have a biconical morphology.  After the binary enters the GW
-phase, the opening angle of cone rapidly increases within a separation
-of tens of milli-arcseconds at a distance of 100~Mpc.  In addition,
-the periodicity of the jet's motion on the conical surface increases
-as the orbital period of the binary goes up in this stage of its
-evolution.  Finally, due to the apparent superluminal motion and the
-widening opening angle, the jet is twisted into a peculiar morphology.
-The jet geometry can be used to infer the set of dynamical and
-geometrical parameters, listed in Table~\ref{table:params}.
+jet produced by a member of a binary that is entering its GW-induced
+phase of inspiral exhibits a distinct chirping morphology.  Jets in
+these binaries have a biconical morphology.  After the binary enters
+the GW phase, the opening angle of cone rapidly increases within a
+separation of tens of milli-arcseconds at a distance of $\sim
+100$~Mpc, depending on the angle that the jet makes relative to the
+line of sight.  In addition, the periodicity of the jet's motion on
+the conical surface increases with the orbital period of the binary in
+this stage of its evolution.  Finally, due to the apparent
+superluminal motion and the widening opening angle, the jet is twisted
+into a peculiar morphology.  The jet geometry can be used to infer the
+set of dynamical and geometrical parameters listed in
+Table~\ref{table:params}.
 
 Milli-arcsecond features can be resolved using long baseline radio
 interferometry \citep{2001ChJAA...1..236Q}.  At higher redshifts, jets
@@ -509,11 +522,6 @@ a lower bound on the expected abundance of bright GW
 sources. Moreover, combined GW and electromagnetic observations of
 compact binary mergers should enable detailed studies of astrophysical
 processes in the strong-field GR regime \citep{2005ApJ...629...15H}.
-
-We make the code for implementing the model presented in this Letter
-available at \url{https://github.com/gkulkarni/JetMorphology} under
-the MIT open source software license.  This code can be used to
-explore the parameter space of the model.
 
 \section*{Acknowledgments}
 
