--- a/Paper/scratch.tex
+++ b/Paper/scratch.tex
@@ -372,3 +372,13 @@ e.g. Table~\ref{tab:example_table}.
 
 We will consider
 unequal black holes masses and elliptical orbits below.  
+
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+volutpat felis sem, fermentum tincidunt dolor bibendum a. Sed sit amet
+justo ac tortor dignissim efficitur. Sed pellentesque, nisi sit amet
+dapibus pharetra, orci dolor dictum elit, dignissim ornare arcu mauris
+non nunc. Nulla non elementum nibh, at posuere felis. Donec a
+sollicitudin libero. Duis vulputate libero egestas, facilisis mauris
+in, interdum elit.
+
