Change figure filename

--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -347,7 +347,7 @@ GW-dominated phase.
     % jet.py (case 0) 
     \includegraphics*[scale=0.45]{{jet_i40_beta0.90_mdot1.00_full}.pdf} &
     % jet_image.py (case 1) 
-    \includegraphics*[scale=0.45]{jet_check_zoom1.pdf}
+    \includegraphics*[scale=0.45]{{jet_i40_beta0.90_mdot1.00_image_zoom1}.pdf}
   \end{tabular}
 \end{center}
 \caption{The left panel shows forward and backward jets for an
